--- a/ExternalServer/ES_FrontEnd/ES_FrontEnd.csproj
+++ b/ExternalServer/ES_FrontEnd/ES_FrontEnd.csproj
@@ -15,14 +15,67 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Resources\Images\Btn_Blizzard.png" />
+    <None Remove="Resources\Images\Btn_Cancel.png" />
+    <None Remove="Resources\Images\Btn_ClearSky.png" />
+    <None Remove="Resources\Images\Btn_Cloudy.png" />
+    <None Remove="Resources\Images\Btn_Foggy.png" />
+    <None Remove="Resources\Images\Btn_LightRain.png" />
+    <None Remove="Resources\Images\Btn_LightSnow.png" />
+    <None Remove="Resources\Images\Btn_Overcast.png" />
+    <None Remove="Resources\Images\Btn_PartlyCloudy.png" />
+    <None Remove="Resources\Images\Btn_Rain.png" />
+    <None Remove="Resources\Images\Btn_Save.png" />
+    <None Remove="Resources\Images\Btn_Snow.png" />
+    <None Remove="Resources\Images\Btn_Thunderstorm.png" />
     <None Remove="Resources\Images\ClientTab.png" />
     <None Remove="Resources\Images\ScenarioTab.png" />
     <None Remove="Resources\Images\ShipTab.png" />
     <None Remove="Resources\Images\WeatherTab.png" />
     <None Remove="Resources\Logo\Foerde5G_Logo.png" />
+    <None Remove="Resources\Logo\HHVision_Logo.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Resources\Images\Btn_Blizzard.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\Btn_Cancel.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\Btn_ClearSky.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\Btn_Cloudy.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\Btn_Foggy.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\Btn_LightRain.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\Btn_LightSnow.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\Btn_Overcast.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\Btn_PartlyCloudy.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\Btn_Rain.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\Btn_Save.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\Btn_Snow.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\Btn_Thunderstorm.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Resources\Images\ClientTab.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
@@ -38,6 +91,9 @@
     <Resource Include="Resources\Logo\Foerde5G_Logo.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
+    <SplashScreen Include="Resources\Logo\HHVision_Logo.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </SplashScreen>
   </ItemGroup>
 
   <ItemGroup>
