--- a/ExternalServer/ES_FrontEnd/ES_FrontEnd.csproj
+++ b/ExternalServer/ES_FrontEnd/ES_FrontEnd.csproj
@@ -44,6 +44,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
